# Backend-hemoday

./: .dockerignore  .gitignore  00_START_HERE.md  API_TESTING_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_REPORT.md  DEPLOYMENT.md  Dockerfile  FIRST_RUN_CHECKLIST.md  MIGRATION_INSTRUCTIONS.md  Makefile  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  WHATS_NEW_v0.1.1.md  aerich.ini  docker-compose.yml  logs.txt  pyproject.toml  repro_sync.py  requirements.txt  seed.py  seed_templates.py  test_commands.ps1  test_commands.sh  test_sync_logic.py  verify_fix.py
app/: admin.py  main.py  main.py.save
app/api/v1/: auth.py  family.py  router.py  schemas.py  sync.py  upload.py
app/core/: config.py  dependencies.py  mail.py  security.py
app/models/: __init__.py  analysis.py  analysis_template.py  base.py  blood_test.py  chelator_type.py  component_type.py  document.py  family.py  password_reset.py  reminder.py  transfusion.py  user.py
app/services/: sync.py  sync.py.save
app/templates/: admin_family_detail.html  admin_users.html  email_reset.html  reset_password.html  reset_password_error.html  reset_password_success.html
